--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native": "0.72.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
