--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
     "yup": "^1.2.0",
-    "lottie-react-native": "5.1.6"
+    "lottie-react-native": "5.1.6",
+    "expo-image-picker": "~14.3.2",
+    "expo-file-system": "~15.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
