--- a/package.json
+++ b/package.json
@@ -19,19 +19,20 @@
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "~49.0.5",
+    "expo-file-system": "~15.4.3",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "install": "^0.13.0",
+    "lottie-react-native": "5.1.6",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
-    "yup": "^1.2.0",
-    "lottie-react-native": "5.1.6",
-    "expo-image-picker": "~14.3.2",
-    "expo-file-system": "~15.4.3"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
