--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.0",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.5",
     "expo-file-system": "~15.4.3",
     "expo-font": "~11.4.0",
