--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-currency-input": "^1.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
     "yup": "^1.2.0"
