--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "expo-file-system": "~15.4.3",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "install": "^0.13.0",
     "lottie-react-native": "5.1.6",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-hook-form": "^7.45.4",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-currency-input": "^1.1.1",
     "react-native-safe-area-context": "4.6.3",
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.0.14",
+    "@types/react": "~18.2.14",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
   },
