--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-currency-input": "^1.1.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
